# chatwoot

./: :qclear  .all-contributorsrc  .annotaterb.yml  .browserslistrc  .bundler-audit.yml  .codeclimate.yml  .commmate_files  .conflict-files  .cursorrules  .deepsource.toml  .dockerignore  .editorconfig  .env  .env.bak  .env.commmate  .env.dev.example  .env.development  .env.development.example  .env.docker  .env.example  .env.example2  .env.fasszap  .env.helpbase  .env.helpdesk.build  .env.izetta  .env.local.example  .env.old  .env.prod.example  .env.production  .env.production.example  .env.railway  .env.sample  .env.test  .eslintrc.js  .foreman  .git-sha  .git_sha  .gitignore  .gitignore.gp-bikes  .gitignore.smsp-main  (+493 more)
.auto-resolution/: .bundler-audit.yml  .scss-lint.yml  LICENSE  histoire.config.ts  package.json
.circleci/: config.yml  setup_chatwoot.sql
.claude/: CRITICAL_FILE_PLACEMENT_RULES.md  ISSUE_TRACKING_ENFORCEMENT.md  RULES.MD  git-rules.md  guidelines.md  settings.json
.cm/: label-prs-by-complexity.cm
.conflict-base-0/: pnpm-lock.yaml
.conflict-side-0/: Makefile  Rakefile
.conflict-side-1/: .env.example  .slugignore  Procfile.dev  pnpm-lock.yaml
.cursor/: coding_rules.mdc
.dependabot/: config.yml
.devcontainer/: Dockerfile  Dockerfile.base  README.md  devcontainer.json  docker-compose.base.yml  docker-compose.yml  reset-dev.sh  setup-dev.sh  start-dev.sh  stop-dev.sh
.do/: app.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  merge-upstream.yml  sync.yml
.husky/: pre-commit  pre-push
.idx/: dev.nix  mcp.json
.qlty/: .gitignore  qlty.toml
.storybook/: main.js  preview.js
.trae/: .ignore
Docs/: CHATWOOT_TO_STRAPI_MIGRATION_ROADMAP.md  ChatwootToStrapiMigrationRoadmap.md  DataMigrationGuide.md  TECHNICAL_ARCHITECTURE.md
Playwright/: .env.example  .eslintrc.json  DOCS.md  README.md  package.json  playwright-docker-compose.yaml  playwright.config.ts  tsconfig.json
__mocks__/: axios.js  fileMock.js
app/: test-matchers.js
attached_assets/: Pasted--body-content-Here-are-our-product-recommendations-content-type-cards-message--1744837379139.txt  Pasted--text-n-content-Here-are-our-product-recommendations-n-content-type--1744817970090.txt  Pasted--text-n-content-Here-are-our-product-recommendations-n-content-type--1744835726911.txt
beet-digital-extension/: README.md  agent.md  plan_de_trabajo.md  terraform.tfvars.example
chatwitdocs/: migration-etapa1.md  migration-etapa2.md
chatwoot-typescript/: .env.example  .env.test  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc  PROJECT_STRUCTURE.md  README.md  TESTING_REPORT.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
clevercloud/: ruby.json
config/: app.yml  application.rb  application.yml  available_features.yml  aws-rds-ca-cert-us-east1-bundle.pem  billing_plans.yml  blazer.yml  boot.rb  cable.yml  custom_features.yml  database.yml  deny_listed_email_domains.yml  deploy.rb  dockerfile.yml  elastic_apm.yml  environment.rb  facebook_comment.yml  features.yml  honeybadger.yml  installation_config.yml  installation_config_chatscommerce.yml  integrations.yml  litellm.yml  llm.yml  llm_models.json  markdown_embeds.yml  mongoid.yml  newrelic.yml  nginx.conf  plans.yml  puma.rb  rds-ca-2019-root.pem  reports_redis.yml  routes.rb  routes.rb.broken  schedule.rb  schedule.yml  schedule_v2_billing.yml  scout_apm.yml  secrets.yml  (+5 more)
context/: wsc_master_prompt.md
controller_docs/: README.md  agents.md  contacts.md  conversations.md  inboxes.md  messages.md  profile.md  teams.md
conversate-ai/: CONTINUATION_PROMPT.md  README.md  run_local_test.sh
conversate-ai/services/conversation-service/: pyproject.toml
conversate-ai/services/conversation-service/app/: connection_manager.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
conversate-ai/services/conversation-service/tests/: conftest.py  test_api.py  test_websockets.py
conversate-ai/services/csg-service/: pyproject.toml
conversate-ai/services/csg-service/app/: consumer.py  graph_db.py  main.py  schemas.py
conversate-ai/services/csg-service/tests/: test_csg_api.py
conversate-ai/services/identity-service/: Dockerfile  pyproject.toml
conversate-ai/services/identity-service/app/: crud.py  database.py  main.py  models.py  schemas.py  security.py
conversate-ai/services/identity-service/tests/: conftest.py  test_api.py
conversate-ai/services/lor_service/: pyproject.toml
conversate-ai/services/lor_service/app/: schemas.py
conversate-ai/services/outcome-service/: pyproject.toml
conversate-ai/services/outcome-service/app/: crud.py  data_contracts.py  database.py  decision_transformer.py  main.py  models.py  predictor.py  schemas.py  training_pipeline.py
conversate-ai/services/sor-service/: pyproject.toml
conversate-ai/services/sor-service/app/: database.py  main.py  models.py  retrieval_pipeline.py
conversate-ai/services/sor_service/: pyproject.toml
conversate-ai/services/sor_service/app/: main.py  schemas.py  security.py
crm/: .env.example  .gitignore  package.json
custom/: .gitignore  LICENSE  MULTIPLATFORM_BUILD.md  README.md
customconfig/: DockerfileCache  fly.toml  post-deploy.sh
db/: schema.rb  seeds.rb
deploy/: .env.example  COOLIFY_DEPLOY.md  Caddyfile  RUNBOOK.md  SMOKE_TESTS.md  VPS_DEPLOY.md  apply-host-edits.sh  before_migrate.rb  before_symlink.rb  bootstrap-vps-ghcr.sh  bootstrap-vps.sh  deploy-production.sh  (+7 more)
(+36841 files in other folders)
