[tool.poetry]
name = "sor-service"
version = "0.1.0"
description = "Self-Optimizing Retrieval service for Conversate AI."
authors = ["Jules <jules@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"

# For database and vector storage
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.0"

# For vector embeddings
sentence-transformers = "^2.7.0"

# Placeholder libraries for the SOTA retrieval models
graphrag = {version = "^0.1.0", optional = true}
raptor-retrieval = {version = "^0.1.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
